# SigProLib

./: README.md
AverageAmplitude/: CMakeLists.txt  README.md
AverageAmplitude/include/: Mean.hpp
AverageAmplitude/src/: Mean.cpp  main.cpp  waveforms.cpp
ConvolutionAlgo/: CMakeLists.txt  README.md
ConvolutionAlgo/include/: Convolution.hpp
ConvolutionAlgo/results/: plot.py
ConvolutionAlgo/src/: Convolution.cpp  main.cpp
Correlation_Function/: CMakeLists.txt  README.md
Correlation_Function/Auto-Correlation_Function/: CMakeLists.txt  README.md
Correlation_Function/Auto-Correlation_Function/include/: FileUtility.hpp
Correlation_Function/Auto-Correlation_Function/results/: plot.py
Correlation_Function/Auto-Correlation_Function/src/: Correlation.cpp  FileUtility.cpp  main.cpp
Correlation_Function/Circular-Correlation/: README.md
Correlation_Function/Circular-Correlation/include/: CircularCorrelation.hpp  Correlation.hpp  Signal.hpp
Correlation_Function/Circular-Correlation/results-data/: plot.py
Correlation_Function/Circular-Correlation/src/: CircularCorrelation.cpp  FileUtility.cpp  Signal.cpp  main.cpp
FIR_Filter/: CMakeLists.txt  README.md
FIR_Filter/include/: FIRFilter.hpp  IFilter.hpp  MovingAverageFilter.hpp  SignalFileHandler.hpp  waveforms.hpp
FIR_Filter/results/: plot.py
FIR_Filter/src/: FIRFilter.cpp  MovingAverageFilter.cpp  SignalFileHandler.cpp  main.cpp
Fourier_Transform/: CMakeLists.txt  README.md
Fourier_Transform/DFT/: CMakeLists.txt  README.md
Fourier_Transform/FFT/: README.md  (+1 more)
RunningSumFilter/: CMakeLists.txt  README.md
SignalRMS/: CMakeLists.txt  README.md
SignalSTDDev/: CMakeLists.txt  README.md
SignalVariance/: README.md
Source_Date/: README.md  rms.cpp  waveforms.cpp
Templated_SignalStatisticsClass/: README.md
(+30 files in other folders)
